Correcting syntax warnings and correcting some bugs in the script which creates localized files containing the framework's main resources

--- a/install/.Bash-utils/config/modules/main/Filesystem.conf
+++ b/install/.Bash-utils/config/modules/main/Filesystem.conf
@@ -16,6 +16,7 @@
 # Writing the command substitution text for the file systems description strings.
 function BU.Main.ModConfig.Filesystem.PrintFSLengthDescription()
 {
+    # shellcheck disable=SC2059
     printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__FILESYSTEM__MAX_LENGHT_STR_MSG" "$?";
 }
 
