--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -17,16 +17,23 @@
 
 # Don't call the "BU.Main.Decho.Decho.Function()" function to color the function name, it must stay perfectly visible on every colors, and the default,
 # and the "$__BU_MAIN_STAT_DECHO" function's value is still set as its default value (in order to avoid bugs during the main module's initialization) : forbid
+
+# shellcheck disable=SC2059,SC2154
 function BU.Main.ModConfig.Colors.PrintColorBGVarsNameSubsCmd() { printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__PrintColorBGVarsNameSubsCmd_FNCT" "$1"; }
+
 
 # Writing the command substitution text for the text coloration.
 
 # Don't call the "BU.Main.Decho.Decho.Function()" function to color the function name, it must stay perfectly visible on every colors, and the default,
 # and the "$__BU_MAIN_STAT_DECHO" function's value is still set as its default value (in order to avoid bugs during the main module's initialization) : forbid
+
+# shellcheck disable=SC2059,SC2154
 function BU.Main.ModConfig.Colors.PrintColorTextVarsNameSubsCmd() { printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__PrintColorTextVarsNameSubsCmd_FNCT" "$1"; }
 
 
 # Writing the name of the variable that could not be initialized with it's command substitution.
+
+# shellcheck disable=SC2059,SC2154
 function BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize() { printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__PrintVariableNameFailedToInitialize_FNCT\n" "$2" "$3" "$1"; }
 
 # -----------------------------------------------
