Adding a new configuration file for the initializer script

--- a/install/.Bash-utils/config/initializer/Status.conf
+++ b/install/.Bash-utils/config/initializer/Status.conf
@@ -25,6 +25,9 @@ if [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'false' ]; then
 
 elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
 
+    # Declare a variable to easily change the location of the parent directory of the status configuration files.
+    ____v_bu_module_init_stat_debug_bashx_status_conf_files_parent_dir="status";
+
     # ------------------------------------------------------
     # Add or remove any supported values inside these arrays
     # ------------------------------------------------------
@@ -40,7 +43,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
 
         # Every values are case-insensitive.
 
-        BashXCatConf="BashXCat.conf";
+        BashXCatConf="$____v_bu_module_init_stat_debug_bashx_status_conf_files_parent_dir/BashXCat.conf";
 
         # If the "" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
         if [ -f "$BashXCatConf" ] && [ -s "$BashXCatConf" ]; then
@@ -48,7 +51,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
 
             cat "$BashXCatConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT+=("$line"); done
 
-        # Else, you can fill the following array with values.
+        # Else, you can manually fill the following array with values.
         else
             __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT=();
         fi
@@ -67,7 +70,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
 
         # Every values are case-insensitive.
 
-        BashXFilesConf="BashXFiles.conf";
+        BashXFilesConf="$____v_bu_module_init_stat_debug_bashx_status_conf_files_parent_dir/BashXFiles.conf";
 
         # If the "BashXFiles.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
         if [ -f "$BashXFilesConf" ] && [ -s "$BashXFilesConf" ]; then
@@ -75,7 +78,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
 
             cat "$BashXFilesConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY+=("$line"); done
 
-        # Else, you can fill the following array with values.
+        # Else, you can manually fill the following array with values.
         else
             __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY=("Args" "Decho" "Files" "Directories" "Status");
         fi
@@ -94,7 +97,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
 
         # Every values are case-insensitive.
 
-        BashXFNCTConf="BashXFNCT.conf";
+        BashXFNCTConf="$____v_bu_module_init_stat_debug_bashx_status_conf_files_parent_dir/BashXFNCT.conf";
 
         # If the "BashXFNCT.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
         if [ -f "$BashXFNCTConf" ] && [ -s "$BashXFNCTConf" ]; then
@@ -102,13 +105,37 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
 
             cat "$BashXFNCTConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_FUNCTIONS_ARRAY+=("$line"); done
 
-        # Else, you can fill the following array with values.
+        # Else, you can manually fill the following array with values.
         else
             __BU_MODULE_INIT_STAT_DEBUG_BASHX_FUNCTIONS_ARRAY=("Args" "Decho" "Errors");
         fi
 
         # Unsetting the created variable, in order to free the memory from a now useless variable.
         unset BashXFNCTConf;
+
+    # -----------------------------------------------
+    # __BU_MODULE_INIT_STAT_DEBUG_BASHX_MODULES_ARRAY
+    # -----------------------------------------------
+
+    elif [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" == m?(od?(ule?))?(s) ]]; then
+
+        # The accepted values are the neame of every modules.
+        # The "All" value can be used as index 0, in order to allow printing the name of every functions from every modules.
+
+        # Every values are case-insensitive.
+
+        BashXModulesConf="$____v_bu_module_init_stat_debug_bashx_status_conf_files_parent_dir/BashXModules.conf";
+
+        # If the "BashXModules.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
+        if [ -f "$BashXModulesConf" ] && [ -s "$BashXModulesConf" ]; then
+            __BU_MODULE_INIT_STAT_DEBUG_BASHX_MODULES_ARRAY=();
+
+            cat "$BashXModulesConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_MODULES_ARRAY+=("$line"); done
+
+        # Else, you can manually fill the following array with values.
+        else
+            __BU_MODULE_INIT_STAT_DEBUG_BASHX_MODULES_ARRAY=('main' 'Hardware');
+        fi
 
     # -----------------------------------------
     # __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT
@@ -120,7 +147,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
 
         # Every values are case-insensitive.
 
-        BashXSubCatConf="BashXSubCat.conf";
+        BashXSubCatConf="$____v_bu_module_init_stat_debug_bashx_status_conf_files_parent_dir/BashXSubCat.conf";
 
         # If the "BashXSubCat.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
         if [ -f "$BashXSubCatConf" ] && [ -s "$BashXSubCatConf" ]; then
