--- a/install/.Bash-utils/config/modules/Hardware/module.conf
+++ b/install/.Bash-utils/config/modules/Hardware/module.conf
@@ -78,14 +78,20 @@ if BU.Main.OS.IsFreeBSD || BU.Main.OS.IsNetBSD || BU.Main.OS.IsOpenBSD; then
     elif    BU.Main.OS.IsNetBSD;    then v_hardware_modinit_bsd_sys="NetBSD";
     elif    BU.Main.OS.IsOpenBSD;   then v_hardware_modinit_bsd_sys="OpenBSD"; fi
 
+    BU.ModuleInit.Msg "Operating system : $v_hardware_modinit_bsd_sys"; BU.ModuleInit.Msg;
+
     __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH" "BSD")";
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                                "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))"
 
     __BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO/"*.lib);
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the $(BU.Main.Decho.Decho.Path "Hardware") module according to the current operating system (Current OS : $v_hardware_modinit_bsd_sys) TO SOURCE (NOT SOURCED YET)"      "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
+
+    unset v_hardware_modinit_bsd_sys;
 fi
 
 BU.Main.OS.IsHaiku && {
+    BU.ModuleInit.Msg "Operating system : Haiku"; BU.ModuleInit.Msg;
+
     __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH" "Haiku")";
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                                "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))"
 
@@ -94,6 +100,8 @@ BU.Main.OS.IsHaiku && {
 }
 
 BU.Main.OS.IsLinux && {
+    BU.ModuleInit.Msg "Operating system : Linux"; BU.ModuleInit.Msg;
+
     __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH" "Linux")";
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                                "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))"
 
@@ -102,6 +110,8 @@ BU.Main.OS.IsLinux && {
 }
 
 BU.Main.OS.IsOSX && {
+    BU.ModuleInit.Msg "Operating system : Mac OSX"; BU.ModuleInit.Msg;
+
     __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH" "OSX")";
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                                "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))"
 
