Corrected every programming errors and finished the development of the lib-localized-unite.sh script

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -65,7 +65,7 @@ else
         # Checking if the library's root folder path written in this file is valid.
         if [ ! -d "$__BU_MAIN_ROOT_DIR_PATH" ]; then
             # shellcheck disable=SC2059
-            BU.ModuleInit.PrintLogError "$(printf "" "")" "$(( LINENO - 2 ))" "ERR_BU_MAIN_MOD_CONF__INVALID_ROOT_DIR_PATH";
+            BU.ModuleInit.PrintLogError "$(printf "%s" "Awaiting for translation")" "$(( LINENO - 2 ))" "ERR_BU_MAIN_MOD_CONF__INVALID_ROOT_DIR_PATH";
 
             echo >&2; echo "IN « ${BASH_SOURCE[0]} », LINE $LINENO --> ERROR !" >&2; echo >&2;
 
@@ -86,7 +86,7 @@ else
     # Checking if the "Bash-utils-root-val.path" exists AND if this file is empty (no library's path specified).
     elif [ -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ] && [ ! -s "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ]; then
         # shellcheck disable=SC2059
-        BU.ModuleInit.PrintLogError "$(printf "" "")" "$(( LINENO - 2 ))" "ERR_BU_MAIN_MOD_CONF__EMPTY_ROOT_DIR_STORAGE_FILE_PATH";
+        BU.ModuleInit.PrintLogError "$(printf "%s" "Awaiting for translation")" "$(( LINENO - 2 ))" "ERR_BU_MAIN_MOD_CONF__EMPTY_ROOT_DIR_STORAGE_FILE_PATH";
 
         ____v_bu_module_init__bu_main_root_dir_path__chk_err="$(BU.ModuleInit.CheckPath "$__BU_MAIN_ROOT_DIR_PATH")";
 
@@ -108,7 +108,7 @@ else
     # Checking if the current user cannot read the "Bash-utils-root-val.path" (file created and owned by the "root" user).
     elif [ -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ] && [ ! -r "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ]; then
         # shellcheck disable=SC2059
-        BU.ModuleInit.PrintLogError "$(printf "" "")" "$(( LINENO - 2 ))" "ERR_BU_MAIN_MOD_CONF__UNALLOWED_TO_READ_ROOT_DIR_STORAGE_FILE_PATH"
+        BU.ModuleInit.PrintLogError "$(printf "%s" "Awaiting for translation")" "$(( LINENO - 2 ))" "ERR_BU_MAIN_MOD_CONF__UNALLOWED_TO_READ_ROOT_DIR_STORAGE_FILE_PATH"
 
         ____v_bu_module_init__bu_main_root_dir_path__chk_err="$(BU.ModuleInit.CheckPath "$__BU_MAIN_ROOT_DIR_PATH")";
 
@@ -133,7 +133,7 @@ else
     # Handling the absence of the "Bash-utils-root-val.path" file.
     elif [ ! -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ]; then
         # shellcheck disable=SC2059
-        BU.ModuleInit.PrintLogError "$(printf "" "")" "$(( LINENO - 2 ))" "ERR_BU_MAIN_MOD_CONF__ABSENT_ROOT_DIR_STORAGE_FILE_PATH"
+        BU.ModuleInit.PrintLogError "$(printf "%s" "Awaiting for translation")" "$(( LINENO - 2 ))" "ERR_BU_MAIN_MOD_CONF__ABSENT_ROOT_DIR_STORAGE_FILE_PATH"
 
         ____v_bu_module_init__bu_main_root_dir_path__chk_err="$(BU.ModuleInit.CheckPath "$__BU_MAIN_ROOT_DIR_PATH")";
 
