--- a/install/.Bash-utils/config/initializer/Status.conf
+++ b/install/.Bash-utils/config/initializer/Status.conf
@@ -49,6 +49,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
         if [ -f "$BashXCatConf" ] && [ -s "$BashXCatConf" ]; then
             __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT=();
 
+            # shellcheck disable=SC2002
             cat "$BashXCatConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT+=("$line"); done
 
         # Else, you can manually fill the following array with values.
@@ -76,6 +77,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
         if [ -f "$BashXFilesConf" ] && [ -s "$BashXFilesConf" ]; then
             __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY=();
 
+            # shellcheck disable=SC2002
             cat "$BashXFilesConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY+=("$line"); done
 
         # Else, you can manually fill the following array with values.
@@ -103,6 +105,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
         if [ -f "$BashXFNCTConf" ] && [ -s "$BashXFNCTConf" ]; then
             __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY=();
 
+            # shellcheck disable=SC2002
             cat "$BashXFNCTConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_FUNCTIONS_ARRAY+=("$line"); done
 
         # Else, you can manually fill the following array with values.
@@ -130,6 +133,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
         if [ -f "$BashXModulesConf" ] && [ -s "$BashXModulesConf" ]; then
             __BU_MODULE_INIT_STAT_DEBUG_BASHX_MODULES_ARRAY=();
 
+            # shellcheck disable=SC2002
             cat "$BashXModulesConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_MODULES_ARRAY+=("$line"); done
 
         # Else, you can manually fill the following array with values.
@@ -153,6 +157,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
         if [ -f "$BashXSubCatConf" ] && [ -s "$BashXSubCatConf" ]; then
             __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT=();
 
+            # shellcheck disable=SC2002
             cat "$BashXSubCatConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT+=("$line"); done
         else
             __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT=();
