Updated the .gitignore

--- a/install/.Bash-utils/config/initializer/Status.conf
+++ b/install/.Bash-utils/config/initializer/Status.conf
@@ -82,7 +82,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
 
         # Else, you can manually fill the following array with values.
         else
-            __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY=("Args" "Decho" "Files" "Directories" "Status");
+            __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY=();
         fi
 
         # Unsetting the created variable, in order to free the memory from a now useless variable.
@@ -110,7 +110,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
 
         # Else, you can manually fill the following array with values.
         else
-            __BU_MODULE_INIT_STAT_DEBUG_BASHX_FUNCTIONS_ARRAY=("Args" "Decho" "Errors");
+            __BU_MODULE_INIT_STAT_DEBUG_BASHX_FUNCTIONS_ARRAY=();
         fi
 
         # Unsetting the created variable, in order to free the memory from a now useless variable.
@@ -138,7 +138,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
 
         # Else, you can manually fill the following array with values.
         else
-            __BU_MODULE_INIT_STAT_DEBUG_BASHX_MODULES_ARRAY=('main' 'Hardware');
+            __BU_MODULE_INIT_STAT_DEBUG_BASHX_MODULES_ARRAY=();
         fi
 
     # -----------------------------------------
