Modified the file reading from the Status.conf file, and corrected the display bug from the time.conf file

--- a/install/.Bash-utils/config/modules/main/time.conf
+++ b/install/.Bash-utils/config/modules/main/time.conf
@@ -39,16 +39,12 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TIME_DATE' "$__BU_MAIN_TIME_
 # Unlike the "$__BU_MODULES_UNIT_DATE_LOG" global variable, this log entry displays colors.
 
 # Declaring the variables which contains the color codes.
-v_time_conf_date_display_color_1="78";
-v_time_conf_date_display_color_2="111";
-v_time_conf_date_display_color_3="78";
+v_time_conf_date_display_color_1="$(tput setaf 78)";
+v_time_conf_date_display_color_2="$(tput setaf 111)";
+v_time_conf_date_display_color_3="$(tput setaf 78)";
 
-# __BU_MAIN_TIME_DATE_DISPLAY="$(printf "\e[38;5;%sm[ \e[38;5;%sm%s\e[38;5;%sm ]\e[38;5;0m" \
-#     "$(tput setaf "$v_time_conf_date_display_color_1")" \
-#     "$(tput setaf "$v_time_conf_date_display_color_2")" \
-#     "$__BU_MAIN_TIME_DATE" \
-#     "$(tput setaf "$v_time_conf_date_display_color_3")")";
-#
-# BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TIME_DATE_DISPLAY' "$__BU_MAIN_TIME_DATE_DISPLAY" 'CMD' \
-# 	"This command substitution prints the output of the « __BU_MAIN_TIME_DATE » command substitution, with more decoration in order to display the date in an easily and colored readable log format : [ YYYY-MM-DD hh-mm-ss ]" \
-# 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+__BU_MAIN_TIME_DATE_DISPLAY="$(echo -ne "$v_time_conf_date_display_color_1[ $v_time_conf_date_display_color_2$__BU_MAIN_TIME_DATE$v_time_conf_date_display_color_3 ]")";
+
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TIME_DATE_DISPLAY' "$__BU_MAIN_TIME_DATE_DISPLAY" 'CMD' \
+	"This command substitution prints the output of the « __BU_MAIN_TIME_DATE » command substitution, with more decoration in order to display the date in an easily and colored readable log format : [ YYYY-MM-DD hh-mm-ss ]" \
+	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
