--- a/install/.Bash-utils/config/initializer/Status.conf
+++ b/install/.Bash-utils/config/initializer/Status.conf
@@ -47,10 +47,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
 
         # If the "" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
         if [ -f "$BashXCatConf" ] && [ -s "$BashXCatConf" ]; then
-            __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT=();
-
-            # shellcheck disable=SC2002
-            cat "$BashXCatConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT+=("$line"); done
+            mapfile -t __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT < "$BashXCatConf";
 
         # Else, you can manually fill the following array with values.
         else
@@ -75,10 +72,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
 
         # If the "BashXFiles.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
         if [ -f "$BashXFilesConf" ] && [ -s "$BashXFilesConf" ]; then
-            __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY=();
-
-            # shellcheck disable=SC2002
-            cat "$BashXFilesConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY+=("$line"); done
+            mapfile -t __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY < "$BashXFilesConf";
 
         # Else, you can manually fill the following array with values.
         else
@@ -103,10 +97,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
 
         # If the "BashXFNCT.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
         if [ -f "$BashXFNCTConf" ] && [ -s "$BashXFNCTConf" ]; then
-            __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY=();
-
-            # shellcheck disable=SC2002
-            cat "$BashXFNCTConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_FUNCTIONS_ARRAY+=("$line"); done
+            mapfile -t __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY < "$BashXFNCTConf";
 
         # Else, you can manually fill the following array with values.
         else
@@ -131,10 +122,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
 
         # If the "BashXModules.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
         if [ -f "$BashXModulesConf" ] && [ -s "$BashXModulesConf" ]; then
-            __BU_MODULE_INIT_STAT_DEBUG_BASHX_MODULES_ARRAY=();
-
-            # shellcheck disable=SC2002
-            cat "$BashXModulesConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_MODULES_ARRAY+=("$line"); done
+            mapfile -t __BU_MODULE_INIT_STAT_DEBUG_BASHX_MODULES_ARRAY < "$BashXModulesConf";
 
         # Else, you can manually fill the following array with values.
         else
@@ -155,10 +143,9 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
 
         # If the "BashXSubCat.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
         if [ -f "$BashXSubCatConf" ] && [ -s "$BashXSubCatConf" ]; then
-            __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT=();
+            mapfile -t __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT < "$BashXSubCatConf";
 
-            # shellcheck disable=SC2002
-            cat "$BashXSubCatConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT+=("$line"); done
+        # Else, you can manually fill the following array with values.
         else
             __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT=();
         fi
