--- a/install/.Bash-utils/config/modules/main/time.conf
+++ b/install/.Bash-utils/config/modules/main/time.conf
@@ -43,7 +43,7 @@ v_time_conf_date_display_color_1="$(tput setaf 78)";
 v_time_conf_date_display_color_2="$(tput setaf 111)";
 v_time_conf_date_display_color_3="$(tput setaf 78)";
 
-__BU_MAIN_TIME_DATE_DISPLAY="$(echo -ne "$v_time_conf_date_display_color_1[ $v_time_conf_date_display_color_2$__BU_MAIN_TIME_DATE$v_time_conf_date_display_color_3 ]")";
+__BU_MAIN_TIME_DATE_DISPLAY="$(echo -ne "$v_time_conf_date_display_color_1" "[ $v_time_conf_date_display_color_2$__BU_MAIN_TIME_DATE$v_time_conf_date_display_color_3 ]")";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TIME_DATE_DISPLAY' "$__BU_MAIN_TIME_DATE_DISPLAY" 'CMD' \
 	"This command substitution prints the output of the « __BU_MAIN_TIME_DATE » command substitution, with more decoration in order to display the date in an easily and colored readable log format : [ YYYY-MM-DD hh-mm-ss ]" \
