Added the "BU.Main.OS.IsBSD()" function

--- a/install/.Bash-utils/config/modules/Hardware/module.conf
+++ b/install/.Bash-utils/config/modules/Hardware/module.conf
@@ -73,7 +73,7 @@ __BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH="$(BU.ModuleInit.FindPath "$
 ## HARDWARE MODULE'S "functions" FOLDER'S SUB-FOLDERS CONTENT
 
 # Path to the function files of the Hardware module's library, according to the current operating system.
-if BU.Main.OS.IsFreeBSD || BU.Main.OS.IsNetBSD || BU.Main.OS.IsOpenBSD; then
+if BU.Main.OS.IsBSD; then
     if      BU.Main.OS.IsFreeBSD;   then v_hardware_modinit_bsd_sys="FreeBSD";
     elif    BU.Main.OS.IsNetBSD;    then v_hardware_modinit_bsd_sys="NetBSD";
     elif    BU.Main.OS.IsOpenBSD;   then v_hardware_modinit_bsd_sys="OpenBSD"; fi
