Making the dev-tools sub-folders optional in a project other than a development tool project

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -311,7 +311,10 @@ BU.Main.ModConfig.Module.BUSubFoldersPaths;
 
 # Declaring the variables inside a function to prevent the displaying of the Shellcheck info messages when Shellchecking the wrapped file.
 
-BU.Main.ModConfig.Module.BUDevToolsPaths;
+# The function call has been moved to the "Initializer.sh" script of the main module, in the "STEP THREE : PROCESSING THE MAIN MODULE'S PARAMETERS" category,
+# because these folders are only used by the development tools provided with the framework, and are therefore useless in another project.
+
+# BU.Main.ModConfig.Module.BUDevToolsPaths;
 
 # -----------------------------------------------
 
