Adding new aliases

--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -2407,13 +2407,57 @@ alias BU.IsOSLinuxWSL2='BU.Main.OS.IsLinuxWSL2';
 
 #################################### DEFINING ALIASES - STATUS ####################################
 
-#### CATEGORY : ""
+#### CATEGORY : "VARIABLES VALUES FUNCTIONS"
 
-## SUB-CATEGORY : ""
+## SUB-CATEGORY : "CHECKING VALUES"
+
+alias BU.ConfEcho='BU.Main.Status.ConfEcho';
 
 # -----------------------------------------------
 
-# SUB-CATEGORY : ""
+# SUB-CATEGORY : "CHECKINGS"
+
+alias BU.CheckSTAT_DEBUG='BU.Main.Status.CheckSTAT_DEBUG';
+alias BU.CheckSTAT_DEBUX_BASHX='BU.Main.Status.CheckSTAT_DEBUG_BASHX';
+alias BU.CheckSTAT_DECHO='BU.Main.Status.CheckSTAT_DECHO';
+alias BU.CheckSTAT_ECHO='BU.Main.Status.CheckSTAT_ECHO';
+alias BU.CheckSTAT_ERROR='BU.Main.Status.CheckSTAT_ERROR';
+alias BU.CheckSTAT_INITIALIZING='BU.Main.Status.CheckSTAT_INITIALIZING';
+alias BU.CheckSTAT_LOG='BU.Main.Status.CheckSTAT_LOG';
+alias BU.CheckSTAT_LOG_REDIRECT='BU.Main.Status.CheckSTAT_LOG_REDIRECT';
+alias BU.CheckSTAT_OPERATE_ROOT='BU.Main.Status.CheckSTAT_OPERATE_ROOT';
+alias BU.CheckSTAT_TIME_HEADER='BU.Main.Status.CheckSTAT_TIME_HEADER';
+alias BU.CheckSTAT_TIME_NEWLINE='BU.Main.Status.CheckSTAT_TIME_NEWLINE';
+alias BU.CheckSTAT_TIME_TXT='BU.Main.Status.CheckSTAT_TIME_TXT';
+alias BU.CheckSTAT_TXT_FMT='BU.Main.Status.CheckSTAT_TXT_FMT';
+alias BU.CheckSTAT_USER_OS='BU.Main.Status.CheckSTAT_USER_OS';
+
+alias BU.CheckProjectStatusVars='BU.Main.Status.CheckProjectStatusVars';
+
+# -----------------------------------------------
+
+## SUB-CATEGORY : CHANGING VALUES MORE EASILY
+alias BU.ChangeSTAT_DECHO='BU.Main.Status.ChangeSTAT_DECHO';
+alias BU.ChangeSTAT_ECHO='BU.Main.Status.ChangeSTAT_ECHO';
+alias BU.ChangeSTAT_ERROR='BU.Main.Status.ChangeSTAT_ERROR';
+alias BU.ChangeSTAT_INITIALIZING='BU.Main.Status.ChangeSTAT_INITIALIZING';
+alias BU.ChangeSTAT_LOG='BU.Main.Status.ChangeSTAT_LOG';
+alias BU.ChangeSTAT_LOG_REDIRECT='BU.Main.Status.ChangeSTAT_LOG_REDIRECT';
+alias BU.ChangeSTAT_OPERATE_ROOT='BU.Main.Status.ChangeSTAT_OPERATE_ROOT';
+alias BU.ChangeSTAT_TIME_HEADER='BU.Main.Status.ChangeSTAT_TIME_HEADER';
+alias BU.ChangeSTAT_TIME_NEWLINE='BU.Main.Status.ChangeSTAT_TIME_NEWLINE';
+alias BU.ChangeSTAT_TIME_TXT='BU.Main.Status.ChangeSTAT_TIME_TXT';
+alias BU.ChangeSTAT_TXT_FMT='BU.Main.Status.ChangeSTAT_TXT_FMT';
+
+# -----------------------------------------------
+
+## SUB-CATEGORY : EASIER BOOLEAN VALUES CHECKINGS
+
+alias BU.CheckStatIsBackupEchoing='BU.Main.Status.CheckStatIsBackupEchoing';
+alias BU.CheCheckStatIsInitializingckStat='BU.Main.Status.CheckStatIsInitializing';
+alias BU.CheckStatIsLogging='BU.Main.Status.CheckStatIsLogging';
+alias BU.CheckStatIsPrintingInit='BU.Main.Status.CheckStatIsPrintingInit';
+alias BU.CheckStatAllowFormatting='BU.Main.Status.CheckStatAllowFormatting';
 
 # -----------------------------------------------
 
