Adding new aliases

--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -2499,10 +2499,10 @@ alias BU.GetFirstFieldBeforeDelim='BU.Main.Text.GetFirstFieldBeforeDelim';
 alias BU.GetLastFieldAfterDelim='BU.Main.Text.GetLastFieldAfterDelim';
 alias BU.GetSubStringAfterDelim='BU.Main.Text.GetSubStringAfterDelim';
 alias BU.GetSubStringBeforeDelim='BU.Main.Text.GetSubStringBeforeDelim';
-alias BU.='BU.Main.Text.';
-alias BU.='BU.Main.Text.';
-alias BU.='BU.Main.Text.';
-alias BU.='BU.Main.Text.';
+alias BU.GetSubStringOccurences='BU.Main.Text.GetSubStringOccurences';
+alias BU.GetStringByteSize='BU.Main.Text.GetStringByteSize';
+alias BU.GetStringCharactersNumber='BU.Main.Text.GetStringCharactersNumber';
+alias BU.GetStringWordsNumber='BU.Main.Text.GetStringWordsNumber';
 
 # -----------------------------------------------
 
