Adding new aliases

--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -2506,11 +2506,23 @@ alias BU.GetStringWordsNumber='BU.Main.Text.GetStringWordsNumber';
 
 # -----------------------------------------------
 
-## SUB-CATEGORY : ""
+## SUB-CATEGORY : "PRINTING TEXT"
+
+alias BU.PrintCharXTimes='BU.Main.Text.PrintCharXTimes';
 
 # -----------------------------------------------
 
-## SUB-CATEGORY : ""
+## SUB-CATEGORY : "REVERSING TEXT"
+
+alias BU.ReverseStringWordsOrder='BU.Main.Text.ReverseStringWordsOrder';
+alias BU.ReverseCharactersOrder='BU.Main.Text.ReverseCharactersOrder';
+
+# -----------------------------------------------
+
+## SUB-CATEGORY : "SPLITTING TEXT AND SPLITTED TEXT PROCESSING"
+
+alias BU.StrToWordArray='BU.Main.Text.StrToWordArray';
+alias BU.WordArrayToStr='BU.Main.Text.WordArrayToStr';
 
 # -----------------------------------------------
 
