Adding new aliases

--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -380,11 +380,24 @@ alias BU.Decho_FMT_U='BU.Main.Decho.Decho.FMT_U';
 
 ################################## DEFINING ALIASES - DIRECTORIES #################################
 
-#### CATEGORY : ""
+#### CATEGORY : "DIRECTORIES FUNCTIONS"
 
-## SUB-CATEGORY : ""
+## SUB-CATEGORY : "PROCESSING FUNCTIONS"
 
-#
+alias BU.ProcessingDir='BU.Main.Directories.ProcessingDir';
+alias BU.OverwriteDir='BU.Main.Directories.OverwriteDir';
+alias BU.Make='BU.Main.Directories.Make';
+alias BU.MakePath='BU.Main.Directories.MakePath';
+alias BU.MkTmpDir='BU.Main.Directories.MkTmpDir';
+
+# -----------------------------------------------
+
+## SUB-CATEGORY : "PATH PROCESSING"
+alias BU.GetDirectoryName='BU.Main.Directories.GetDirectoryName';
+alias BU.GetDirectoryPath='BU.Main.Directories.GetDirectoryPath';
+alias BU.GetParentDirectoryName='BU.Main.Directories.GetParentDirectoryName';
+alias BU.GetParentDirectoryPath='BU.Main.Directories.GetParentDirectoryPath';
+alias BU.TriggerRootDirWarning='BU.Main.Directories.TriggerRootDirWarning';
 
 # -----------------------------------------------
 
@@ -417,7 +430,6 @@ alias BU.__EchoCPLS='BU.Main.Echo.__EchoCPLS';
 
 ## SUB-CATEGORY : "DISPLAYING A CONTEXT MESSAGE"
 
-#
 alias BU.EchoError='BU.Main.Echo.Error';
 alias BU.EchoMsg='BU.Main.Echo.Msg';
 alias BU.EchoNewstep='BU.Main.Echo.Newstep';
