--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -541,7 +541,7 @@ alias BU.EchoYellow='BU.Main.Echo.Yellow';
 
 ## SUB-CATEGORY : "LINE BREAKS ACCORDING TO THE ''$__BU_MAIN_PROJECT_LOG_FILE_PATH'' VARIABLE VALUE"
 
-BU.Newline='BU.Main.Echo.Newline';
+alias BU.Newline='BU.Main.Echo.Newline';
 
 # -----------------------------------------------
 
