Added new functions and aliases

--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -609,6 +609,19 @@ alias BU.DeleteFile='BU.Main.Files.DeleteFile';
 
 # -----------------------------------------------
 
+## CHECKING FILE INFORMATIONS
+## DEBUG ID : checking-file-informations
+
+alias BU.IsFileReadOnly='BU.Main.Files.IsReadOnly';
+alias BU.IsFileRW='BU.Main.Files.IsRW';
+alias BU.IsFileRWX='BU.Main.Files.IsRWX';
+alias BU.IsFileRX='BU.Main.Files.IsRX';
+alias BU.IsFileWriteOnly='BU.Main.Files.IsWriteOnly';
+alias BU.IsFileWX='BU.Main.Files.IsWX';
+alias BU.IsFileExecutableOnly='BU.Main.Files.IsExecutableOnly';
+
+# -----------------------------------------------
+
 ## SUB-CATEGORY : "GETTING FILE INFORMATIONS"
 
 alias BU.GetByteSize='BU.Main.Files.GetByteSize';
