Added new functions and aliases

--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -2283,9 +2283,23 @@ alias BU.HeaderYellowWhiteCMD='BU.Main.Headers.Header.CMD.Yellow.White';
 
 alias BU.IsOSAndroidTermux='BU.Main.OS.IsAndroidTermux';
 
+alias BU.IsAndroid7='BU.Main.OS.IsAndroid7';
+alias BU.IsAndroid8='BU.Main.OS.IsAndroid8';
+alias BU.IsAndroid9='BU.Main.OS.IsAndroid9';
+alias BU.IsAndroid10='BU.Main.OS.IsAndroid10';
+alias BU.IsAndroid11='BU.Main.OS.IsAndroid11';
+
+alias BU.IsAndroidDeviceSmartphone='function BU.Main.OS.IsAndroidDeviceSmartphone';
+alias BU.IsAndroidDeviceTablet='BU.Main.OS.IsAndroidDeviceTablet';
+
+alias BU.IsAndroidRooted='BU.Main.OS.IsAndroidRooted';
+
 # -----------------------------------------------
 
 ## SUB-CATEGORY : "GATHERING INFORMATIONS"
+
+alias BU.GetAndroidDevice='BU.Main.OS.GetAndroidDevice';
+alias BU.GetAndroidVersion='BU.Main.OS.GetAndroidVersion';
 
 # -----------------------------------------------
 
