Added new functions and aliases

--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -2283,6 +2283,9 @@ alias BU.HeaderYellowWhiteCMD='BU.Main.Headers.Header.CMD.Yellow.White';
 
 alias BU.IsOSAndroidTermux='BU.Main.OS.IsAndroidTermux';
 
+alias BU.IsAndroid4='BU.Main.OS.IsAndroid4';
+alias BU.IsAndroid5='BU.Main.OS.IsAndroid5';
+alias BU.IsAndroid6='BU.Main.OS.IsAndroid6';
 alias BU.IsAndroid7='BU.Main.OS.IsAndroid7';
 alias BU.IsAndroid8='BU.Main.OS.IsAndroid8';
 alias BU.IsAndroid9='BU.Main.OS.IsAndroid9';
