--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -172,6 +172,9 @@ if [ -d "/usr/local/lib/Bash-utils" ]; then
 elif [ -d "$__BU_MODULE_INIT__ROOT/.Bash-utils" ]; then
     __BU_MAIN_ROOT_DIR_PATH="$__BU_MODULE_INIT__ROOT/.Bash-utils";
 
+elif [ -d "$__BU_MODULE_INIT__ROOT/.Bash-utils/Bash-utils" ]; then
+    __BU_MAIN_ROOT_DIR_PATH="$__BU_MODULE_INIT__ROOT/.Bash-utils/Bash-utils";
+
 # Else, if the library's root directory doesn't exists in at least one of the above paths, then the value stored in the "Bash-utils-root-val.path" is used as the path of this root directory.
 else
     # For a better environment integration, it is highly advised to store the path in a file
@@ -274,7 +277,7 @@ else
 
         ____v_bu_module_init__bu_main_root_dir_path__chk_err="$(BU.ModuleInit.CheckPath "$__BU_MAIN_ROOT_DIR_PATH")";
 
-        echo >&2; echo "IN « ${BASH_SOURCE[0]} », LINE $LINENO --> ERROR !" >&2; echo >&2;
+        echo >&2; echo "IN « ${BASH_SOURCE[0]} », LINE $(( LINENO - 7 )) --> ERROR !" >&2; echo >&2;
 
         echo "The Bash Utils's root folder's path storage file « $____v_bu_module_init__bu_main_root_dir_path__chk_err » doesn't exists" >&2; echo >&2;
         echo "Please create this file and write the path of the library's root folder inside this file, manually or with the installer file." >&2; echo >&2;
