Bug fix in progress

--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -22,7 +22,7 @@ function BU.Main.ModConfig.Project.GetProjectFilePath()
         find_path="$(BU.ModuleInit.FindPath "$(cd "$(printf "%s" "$__BU_MAIN_PROJECT_FILE_PARENT")" || \
         {
             echo >&2; echo "IN « ${BASH_SOURCE[0]} », FUNCTION « ${FUNCNAME[0]} », LINE « $LINENO » --> ERROR : UNABLE TO GET THE " >&2; echo >&2; BU.Main.Errors.Exit 1;
-        }; pwd)" "$v_cut")";
+        } || return 1; pwd)" "$v_cut")";
 
     #**** Code ****
     echo "$find_path";
@@ -87,7 +87,7 @@ else
 fi
 
 # Project's file path.
-__BU_MAIN_PROJECT_FILE_PATH="$(BU.Main.ModConfig.Project.GetProjectFilePath "$__BU_MAIN_PROJECT_FILE_NAME")"; echo "$__BU_MAIN_PROJECT_FILE_PATH";
+__BU_MAIN_PROJECT_FILE_PATH="$(BU.Main.ModConfig.Project.GetProjectFilePath "$__BU_MAIN_PROJECT_FILE_NAME")"; echo "$__BU_MAIN_PROJECT_FILE_PATH" || return 1;
 
 
 # -------
@@ -128,9 +128,9 @@ __BU_MAIN_PROJECT_COLOR_BG_RAW_CODE_FILE_PARENT="$__BU_MAIN_PROJECT_TMP_DIR_PATH
 __BU_MAIN_PROJECT_COLOR_BG_RAW_CODE_FILE_NAME="bgcolor.raw";
 __BU_MAIN_PROJECT_COLOR_BG_RAW_CODE_FILE_PATH="$__BU_MAIN_PROJECT_COLOR_BG_RAW_CODE_FILE_PARENT/$__BU_MAIN_PROJECT_COLOR_BG_RAW_CODE_FILE_NAME";
 
-DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_BG_RAW_CODE_FILE_PARENT' "$__BU_MAIN_PROJECT_COLOR_BG_RAW_CODE_FILE_PARENT" 'Dirpath'           "This global variable stores the path to the terminal's raw background color code file's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
-DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_BG_RAW_CODE_FILE_NAME' "$__BU_MAIN_PROJECT_COLOR_BG_RAW_CODE_FILE_NAME" 'File'                  "This global variable stores the name of the terminal's raw background color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
-DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_BG_RAW_CODE_FILE_PATH' "$__BU_MAIN_PROJECT_COLOR_BG_RAW_CODE_FILE_PATH" 'Filepath'              "This global variable stores the path to the terminal's raw background color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_BG_RAW_CODE_FILE_PARENT' "$__BU_MAIN_PROJECT_COLOR_BG_RAW_CODE_FILE_PARENT" 'Dirpath'           "This global variable stores the path to the terminal's raw background color code file's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_BG_RAW_CODE_FILE_NAME' "$__BU_MAIN_PROJECT_COLOR_BG_RAW_CODE_FILE_NAME" 'File'                  "This global variable stores the name of the terminal's raw background color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_BG_RAW_CODE_FILE_PATH' "$__BU_MAIN_PROJECT_COLOR_BG_RAW_CODE_FILE_PATH" 'Filepath'              "This global variable stores the path to the terminal's raw background color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
 
 
 # -------
@@ -160,9 +160,9 @@ __BU_MAIN_PROJECT_COLOR_TEXT_RAW_CODE_FILE_PARENT="$__BU_MAIN_PROJECT_TMP_DIR_PA
 __BU_MAIN_PROJECT_COLOR_TEXT_RAW_CODE_FILE_NAME="fgcolor.raw";
 __BU_MAIN_PROJECT_COLOR_TEXT_RAW_CODE_FILE_PATH="$__BU_MAIN_PROJECT_COLOR_TEXT_RAW_CODE_FILE_PARENT/$__BU_MAIN_PROJECT_COLOR_TEXT_RAW_CODE_FILE_NAME";
 
-DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_TEXT_RAW_CODE_FILE_PARENT' "$__BU_MAIN_PROJECT_COLOR_TEXT_RAW_CODE_FILE_PARENT"         'Dirpath'   "This global variable stores the path to the terminal's raw text color code file's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
-DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_TEXT_RAW_CODE_FILE_NAME' "$__BU_MAIN_PROJECT_COLOR_TEXT_RAW_CODE_FILE_NAME"             'File'      "This global variable stores the name of the terminal's raw text color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
-DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_TEXT_RAW_CODE_FILE_PATH' "$__BU_MAIN_PROJECT_COLOR_TEXT_RAW_CODE_FILE_PATH"             'Filepath'  "This global variable stores the path to the terminal's raw text color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_TEXT_RAW_CODE_FILE_PARENT' "$__BU_MAIN_PROJECT_COLOR_TEXT_RAW_CODE_FILE_PARENT"         'Dirpath'   "This global variable stores the path to the terminal's raw text color code file's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_TEXT_RAW_CODE_FILE_NAME' "$__BU_MAIN_PROJECT_COLOR_TEXT_RAW_CODE_FILE_NAME"             'File'      "This global variable stores the name of the terminal's raw text color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_TEXT_RAW_CODE_FILE_PATH' "$__BU_MAIN_PROJECT_COLOR_TEXT_RAW_CODE_FILE_PATH"             'Filepath'  "This global variable stores the path to the terminal's raw text color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
 
 
 # -------
